--- a/.github/workflows/lof.yml
+++ b/.github/workflows/lof.yml
@@ -14,7 +14,7 @@ on:
     # 例：如需调整为14:30， 将45改为30即可
     # 设置仅周内运行，将最后一个'*'改为'1-5'
     #- cron: '45 6 * * *'
-    - cron: "0 0,3,6,9,11,13,15,18,21,23 * * ?"
+    - cron: '0 0,3,6,9,11,13,15,18,21,23 * * *'
 
 jobs:
   LOF:
